# NMPC-ACADOS-CPP

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build.sh
acados_generated/: acados_sim_solver_differential_drive.c  acados_sim_solver_differential_drive.h  acados_solver.pxd  acados_solver_differential_drive.c  acados_solver_differential_drive.h  main_differential_drive.c  main_sim_differential_drive.c
acados_generated/differential_drive_cost/: differential_drive_cost.h  differential_drive_cost_y_0_fun.c  differential_drive_cost_y_0_fun_jac_ut_xt.c  differential_drive_cost_y_0_hess.c  differential_drive_cost_y_e_fun.c  differential_drive_cost_y_e_fun_jac_ut_xt.c  differential_drive_cost_y_e_hess.c  differential_drive_cost_y_fun.c  differential_drive_cost_y_fun_jac_ut_xt.c  differential_drive_cost_y_hess.c
acados_generated/differential_drive_model/: differential_drive_expl_ode_fun.c  differential_drive_expl_vde_adj.c  differential_drive_expl_vde_forw.c  differential_drive_model.h
configs/: bicycle.json  differential_drive.json  multi_quadrotor.json  quadrotor.json  rocket.json
include/: acados_cpp_wrapper.hpp  acados_mpc_solver.hpp
python/: bicycle_model.py  differential_drive_model.py  generate_bicycle.py  generate_differential_drive.py  generate_quadrotor.py  generate_rocket.py  quadrotor_model.py  rocket_model.py
src/: acados_cpp_wrapper.cpp  acados_mpc_solver.cpp  main.cpp  mpc_controller.cpp
